fix: Fix images not fitting on screen when too big

--- a/flaskrer/static/style.css
+++ b/flaskrer/static/style.css
@@ -4,6 +4,10 @@ html {
   padding: 1rem;
 }
 
+article img {
+  width: 100%;
+}
+
 body {
   max-width: 960px;
   margin: 0 auto;
